[FEATURE] Added unit tests for all services